Final Config: Fix paths, update gitignore, restore optuna

--- a/notebooks/example_usage.ipynb
+++ b/notebooks/example_usage.ipynb
@@ -65,7 +65,7 @@
     "import scanpy as sc\n",
     "\n",
     "# Add scLightGAT to path\n",
-    "sys.path.insert(0, '/Group16T/common/lcy/dslab_lcy/GitRepo/scLightGAT/scLightGAT.main')\n",
+    "sys.path.insert(0, '/Group16T/common/lcy/dslab_lcy/GitRepo/scLightGAT')\n",
     "\n",
     "from scLightGAT.pipeline import train_pipeline\n",
     "from scLightGAT.training.model_manager import CellTypeAnnotator\n",
@@ -181,12 +181,12 @@
     "### Output Files\n",
     "```\n",
     "output_path/\n",
-    "├── adata_with_predictions.h5ad    # Result with predictions\n",
-    "├── umap_comparison.png            # GT vs scLightGAT UMAP\n",
-    "├── umap_scLightGAT.png            # scLightGAT only UMAP\n",
-    "├── accuracy_report.txt            # Custom accuracy metrics\n",
-    "├── lightgbm_confusion_matrix.png  # Classification matrix\n",
-    "└── gat_training_loss.png          # GAT training curve\n",
+    "\u251c\u2500\u2500 adata_with_predictions.h5ad    # Result with predictions\n",
+    "\u251c\u2500\u2500 umap_comparison.png            # GT vs scLightGAT UMAP\n",
+    "\u251c\u2500\u2500 umap_scLightGAT.png            # scLightGAT only UMAP\n",
+    "\u251c\u2500\u2500 accuracy_report.txt            # Custom accuracy metrics\n",
+    "\u251c\u2500\u2500 lightgbm_confusion_matrix.png  # Classification matrix\n",
+    "\u2514\u2500\u2500 gat_training_loss.png          # GAT training curve\n",
     "```"
    ]
   },
