Fix optimize pipeline and improve progress/reporting
- Consolidated progress bar with stage info

- Filtered zero-support classes from classification report

- Removed all Chinese comments

- Archived/ignored experiment result artifacts

--- a/notebooks/example_usage.ipynb
+++ b/notebooks/example_usage.ipynb
@@ -35,6 +35,9 @@
     "# With batch correction\n",
     "./run_sclight.gat.sh --batch-key samples GSE115978\n",
     "\n",
+    "# Optimization Mode (Optuna)\n",
+    "./run_sclight.gat.sh --optimize --optuna-trials 20 sapiens_full\n",
+    "\n",
     "# CAF mode (Cancer-Associated Fibroblasts)\n",
     "./run_sclight.gat.sh --caf CAF\n",
     "\n",
@@ -121,6 +124,7 @@
     "| Hierarchical | `--hierarchical` | Subtypes for CD4+T, CD8+T, B cells, Plasma, DC |\n",
     "| CAF | `--caf` | CAF-specific training/test data |\n",
     "| Inference | `--inference-only` | Skip training, use cached models |\n",
+    "| Optimization | `--optimize` | Hyperparameter tuning with Optuna |\n",
     "\n",
     "### Available Datasets\n",
     "\n",
@@ -181,12 +185,13 @@
     "### Output Files\n",
     "```\n",
     "output_path/\n",
-    "\u251c\u2500\u2500 adata_with_predictions.h5ad    # Result with predictions\n",
-    "\u251c\u2500\u2500 umap_comparison.png            # GT vs scLightGAT UMAP\n",
-    "\u251c\u2500\u2500 umap_scLightGAT.png            # scLightGAT only UMAP\n",
-    "\u251c\u2500\u2500 accuracy_report.txt            # Custom accuracy metrics\n",
-    "\u251c\u2500\u2500 lightgbm_confusion_matrix.png  # Classification matrix\n",
-    "\u2514\u2500\u2500 gat_training_loss.png          # GAT training curve\n",
+    "└── <TIMESTAMP>/               # Timestamped execution folder\n",
+    "    \u251c\u2500\u2500 adata_with_predictions.h5ad    # Result with predictions\n",
+    "    \u251c\u2500\u2500 umap_comparison.png            # GT vs scLightGAT UMAP\n",
+    "    \u251c\u2500\u2500 umap_scLightGAT.png            # scLightGAT only UMAP\n",
+    "    \u251c\u2500\u2500 accuracy_report.txt            # Custom accuracy metrics\n",
+    "    \u251c\u2500\u2500 lightgbm_confusion_matrix.png  # Classification matrix\n",
+    "    \u2514\u2500\u2500 gat_training_loss.png          # GAT training curve\n",
     "```"
    ]
   },
